--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ docker = "^6.1.3"
 websocket-client = "1.4.2"
 pytest = "7.4.0"
 joblib = "1.2.0"
+requests = "2.28.1"
 
 
 [tool.poetry.dev-dependencies]
