--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.11"
+python = ">=3.9,<=3.11"
 docker = "^6.1.3"
 websocket-client = "1.4.2"
 pytest = "7.4.0"
